styles/profile.css
body {
    background: linear-gradient(180deg, #D6F3FB 49.48%, rgba(255, 255, 255, 0.49) 100%);
    background-repeat: no-repeat;
}

.details-container {
    background-image: url("../images/background-profile.png");
    background-repeat: no-repeat;
    background-position: initial;
    background-size: cover;
    padding: 50px;
    padding-bottom: 10px;
}

.profile-icon-container {
    display: inline-block;
    border-radius: 50%;
    background-color: lightgray;
}

.profile-icon {
    font-size: 135px !important;
}

.profile-details {
    float: right;
    width: 80%;
}

.profile-details h3 {
    display: inline-block;
    font-family: 'Alegreya Sans SC';
    font-weight: 700;
    font-size: 40px;
}

.profile-details h5 {
    font-family: 'Alegreya Sans';
    color: gray;
    font-size: 24px;
}

.stats {
    display: inline-block;
    margin-right: 30px;
}

.stats span {
    font-size: 22px !important;
}

.stats h6 {
    display: inline-block;
    font-family: 'Alegreya Sans SC';
    font-weight: 700;
    font-size: 20px;
}

.stats h6:last-child, .stats span:last-child {
    float: right;
}

.stats h6:first-child {
    margin-right: 15px;
}

.about-me {
    display: inline-block;
    width: 16%;
    margin: 30px;
    padding: 25px;
    background: linear-gradient(180deg, #75E6DA 0%, rgba(117, 230, 218, 0) 100%);
}

.about-me p {
    font-family: 'Alegreya Sans SC';
}

.content {
    width: 75%;
    float: right;
    padding: 30px;
}

.content h3 {
    display: inline-block;
    font-family: 'Alegreya Sans SC';
    font-weight: 700;
}

#grid-container {
    display: grid;
    grid-template-columns: auto auto;
}   

